# wgpu_playground

./: Cargo.toml  README.md  cmds.txt  imgui.ini
assets/: human_floor.mtl
assets/models/maserati_ghibli_hybrid/: license.txt  scene.gltf
assets/models/vehicle_zis-101/: license.txt  scene.gltf
src/: app.rs  app_variants.rs  assets_helper.rs  camera.rs  input_event.rs  lib.rs  main.rs  model.rs  simple_quad_app.rs  simple_tri_app.rs  windowed_app.rs
src/android/: ffi.rs
src/examples/2d_liquid/: liquid2d.rs
src/examples/2d_liquid/shaders/glsl/: animate.glsl  apply_pressure.glsl  apply_viscosity.glsl  common.glsl  debug.frag  debug.vert  particle.frag  particle.vert  sort_pairs.glsl  update_color_and_target_pos.glsl  update_densities.glsl  update_positions.glsl  update_predicted_pos.glsl  voronoi.frag  write_spatial_lookup.glsl  write_start_indices.glsl
src/examples/2d_liquid/shaders/spirv/: animate.cs.spv  apply_pressure.cs.spv  apply_viscosity.cs.spv  debug.fs.spv  debug.vs.spv  (+11 more)
src/examples/boxes/: boxes.rs
src/examples/flipboard/: arkanoid.rs  flipboard.rs
src/examples/fullscreen_tiangle/: fullscreen_triangle.rs
src/examples/gltf/: gltf_viewer.rs
src/examples/imgui_example/: imgui_example.rs
src/examples/pbr/: pbr.rs
src/examples/shadow_mapping/: shadow_mapping.rs
src/examples/skybox/: skybox_example.rs
src/examples/volumetric/: volumetric.rs
src/pieces/: geometry_primitives.rs  skybox.rs
src/pieces/shaders/wgsl/: blit.wgsl  irradiance_gen.wgsl  mip_generation.wgsl  prefiltered_env_gen.wgsl  skybox.wgsl
src/shaders/: fullscreen_quad.wgsl
src/shaders/glsl/: fullscreen_quad.frag  fullscreen_quad.vert
src/shaders/hlsl/: fullscreen_tri.hlsl
src/shaders/spirv/: fullscreen_tri_fs.spv  fullscreen_tri_vs.spv
src/shaders/wgsl/: fullscreen_tri.wgsl
(+39 files in other folders)
