[package]
name = "wgpu_template_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.0"
winit = "0.28.1"
image = "0.24.5"
env_logger = "0.10.0"
pollster = "0.2.5"
bytemuck = "1.12.0"
log = "0.4.17"
structopt = "0.3.26"
